# dbt_playground

./: .gitignore  README.md
dbt_env/: .env-example  pyproject.toml
dbt_env/.dbt/: profiles.yml
dbt_env/project_001/: dbt_project.yml  packages.yml
dbt_env/project_001/.dbt/: profiles.yml
dbt_env/project_001/models/marts/finance/: fct_orders.sql  marts_finance.yml
dbt_env/project_001/models/marts/marketing/: dim_customers.sql  marts_marketing.yml
dbt_env/project_001/models/staging/jaffle_shop/: src_jaffle_shop.yml  stg_jaffle_shop.yml  stg_jaffle_shop__customers.sql  stg_jaffle_shop__orders.sql
dbt_env/project_001/models/staging/stripe/: _stripe_docs.md  src_stripe.yaml  stg_stripe__payments.sql
dbt_env/project_001/tests/: assert_least_paying_customer_is_positive.sql
dbt_env/project_001/tests/generic/: test_is_positive_integer.sql
dbt_env/project_002/: dbt_project.yml  package-lock.yml  packages.yml
dbt_env/project_002/macros/: apply_default_rounding.sql  select_dev_data_range.sql
dbt_env/project_002/models/marts/finance/: marts_finance.yml  src_active_customer_revenue.sql
dbt_env/project_002/models/staging/candy_store/: src_candy_store.yaml  stg_candy_store.yaml  stg_candy_store__orders.sql
dbt_env/project_002/models/staging/crm/: src_crm.yaml  (+2 more)
dbt_env/project_002/snapshots/: customer_snapshot_check.sql  customer_snapshot_check_hard_deletes.sql  customer_snapshot_timestamp.sql
dbt_env/project_002/state/: manifest.json
dbt_env/project_002/tests/: test_nr_orders_positive.sql
dbt_env/project_002/tests/generic/: test_is_positive_number.sql
