[tool.poetry]
name = "dbt_env"
version = "0.1.0"
description = ""
authors = ["JesseSchouten <jesse.schouten@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "1.7"
dbt-databricks = "^1.7.15"
sqlfluff = "^3.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
